# claude-o-meter

./: .gitignore  Package.swift  README.md
.github/workflows/: release.yml
Sources/ClaudeMeterApp/: AppDelegate.swift  ClaudeBadge.swift  PopoverView.swift  UsageProbe.swift  UsageStore.swift  main.swift
Sources/ClaudeMeterCore/: Formatting.swift  Pricing.swift  UsageReader.swift  UsageSnapshot.swift
Sources/ClaudeMeterWidget/: ClaudeMeterWidget.swift  SharedPie.swift
Sources/ClaudeoMeterApp/: AppDelegate.swift  ClaudeBadge.swift  CodexUsageProvider.swift  LiquidGlassStyles.swift  PopoverView.swift  UsageProbe.swift  UsageProvider.swift  UsageStore.swift  main.swift
Sources/ClaudeoMeterCore/: CodexRateLimitParser.swift  Formatting.swift  UsageSnapshot.swift
Tests/ClaudeoMeterCoreTests/: CodexRateLimitParserTests.swift  FormattingTests.swift  UsageSnapshotTests.swift
scripts/: build.sh  clean-keychain.sh  install.sh  installer.sh  launch-agent.sh  smoke-macos.sh  uninstall.sh
windows/: README.md
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: cookies.rs  font5x7.rs  icon_render.rs  main.rs  probe.rs  settings.rs  types.rs
