[package]
name = "claude-o-meter"
version = "0.1.0"
description = "Live Claude Pro/Max usage in the Windows system tray"
edition = "2021"
default-run = "claude-o-meter"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"

# Crypto for Chromium cookie decryption (AES-256-GCM with v10 prefix)
aes-gcm = "0.10"
base64 = "0.22"

# Windows DPAPI for unwrapping the cookie master key from Local State
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
winreg = "0.52"

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json", "blocking"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

# Custom tray-icon rendering (pie drain effect on top of the burst PNG)
[dependencies.tiny-skia]
version = "0.11"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
